Z-index fix.

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,7 @@
 	padding: 0.5rem;
 	outline: none;
 	cursor: pointer;
+	z-index: 5;
 
 	&:hover {
 		border: solid 1px black;
@@ -152,6 +153,10 @@
 		margin-top: 1rem;
 		cursor: pointer;
 
+		&:hover {
+			background: rgb(228, 228, 228);
+		}
+
 		.button-link {
 			color: black;
 
@@ -196,6 +201,25 @@
 
 		&:hover {
 			background: rgb(228, 228, 228);
+		}
+	}
+
+	.icon {
+		font-size: 5rem;
+		color: gray;
+		position: absolute;
+		top: 50%;
+		left: 45%;
+		transform: translate(-50%, -50%);
+		animation: spinLogo 2s infinite ease-out;
+	}
+
+	@keyframes spinLogo {
+		from {
+			transform: rotate(0deg);
+		}
+		to {
+			transform: rotate(359deg);
 		}
 	}
 }
